--- a/client-mobile/package.json
+++ b/client-mobile/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "client-mobile",
+  "name": "supper",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,10 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "expo": "~52.0.28",
+    "expo-constants": "~17.0.5",
+    "expo-linking": "~7.0.5",
+    "expo-router": "~4.0.17",
     "expo-status-bar": "~2.0.1",
+    "lucide-react": "^0.474.0",
     "react": "18.3.1",
-    "react-native": "0.76.6"
+    "react-native": "0.76.6",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
